# MasteryTrack

./: README.md  TECHNICAL_DOCUMENTATION.html  TECHNICAL_DOCUMENTATION.md
.github/workflows/: build-all-platforms.yml  build-macos-only.yml
mastery-tracker/: README.md  package-lock.json  package.json
mastery-tracker/src/: App.css  App.tsx  api.ts  types.ts  utils.ts
mastery-tracker/src-tauri/: Cargo.toml  tauri.conf.json
mastery-tracker/src-tauri/src/: app_state.rs  commands.rs  db.rs  idle.rs  lib.rs  main.rs  timer.rs  tray.rs
mastery-tracker/src/components/: Dashboard.tsx  History.tsx  SessionHistory.tsx  Settings.tsx  SettingsPage.tsx
mastery-tracker/src/lib/: utils.ts
masterytrack/: DISTRIBUTION.md  build-low-memory.sh  build-mac.sh  index.html  package-lock.json  package.json
masterytrack/src/: App.css  App.tsx  index.css  store.ts  types.ts
masterytrack/src-tauri/: Cargo.toml  tauri.conf.json
masterytrack/src-tauri/.cargo/: config.toml
masterytrack/src-tauri/src/: db.rs  errors.rs  lib.rs  models.rs  screenshot.rs  timer.rs
masterytrack/src/components/: AboutPage.tsx  Banner.tsx  HistoryTable.tsx  MusicPlayer.tsx  ProgressRing.css  ProgressRing.tsx  ReflectionModal.tsx  ScreenshotGallery.tsx  SettingsPanel.tsx  SplashScreen.tsx  TimerCard.tsx
masterytrack/src/utils/: ambientSounds.ts  playlists.ts  time.ts
masterytracker/: index.html  package-lock.json  package.json
masterytracker/src/: App.css  App.tsx  index.css  types.ts
masterytracker/src-tauri/: Cargo.toml  tauri.conf.json
masterytracker/src-tauri/src/: db.rs  main.rs  models.rs  productivity.rs  timer.rs
masterytracker/src/api/: tauri.ts
masterytracker/src/components/: DashboardGrid.tsx  HistoryTable.tsx  ProgressCircle.tsx  ReflectionDialog.tsx  SessionEditor.tsx  SettingsPanel.tsx  TimerCard.tsx
masterytracker/src/hooks/: useTimer.ts
