[package]
name = "app"
version = "0.1.0"
description = "10,000-Hour Mastery Tracker"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
user-idle-time = "0.7.0"
log = "0.4"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
sysinfo = "0.30"
tauri = { version = "2.9.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1.3"
screenshots = "0.7"
image = { version = "0.25", features = ["jpeg"] }
rand = { version = "0.8", features = ["std", "getrandom"] }
base64 = "0.22"

[patch.crates-io]
user-idle-time = { path = "vendor/user-idle-time" }
