[package]
name = "masterytracker-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
user-idle = "0.6"
once_cell = "1.19"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.31", features = ["multithread"] }
csv = "1.3"
tauri = { version = "2.9", features = ["tray-icon", "devtools", "image-png"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-notification = "2.3"
tauri-plugin-window-state = "2.4"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
log = "0.4"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
